2.0 joining